--- a/Html/css/style.css
+++ b/Html/css/style.css
@@ -1,88 +1,131 @@
-body,html
-{
+body,html {
 	background-color: white;
-    margin : 0;
-    padding : 0px;
-    overflow-x: hidden;
-    text-align: center;
-    font-family: Arial, Helvetica, sans-serif;
-  }
+  margin : 0;
+  padding : 0px;
+  overflow-x: hidden;
+  /*text-align: center;*/
+  /*font-family: Arial, Helvetica, sans-serif;*/
+  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+}
 
   #chat {
-      width: 600px;
-      margin: 50px auto;
-      display:none;
-      border-radius: 30px;
-      height: 400px;
-      overflow-y: scroll;
-      background: #f5f7fa;
-      padding: 20px; }
+  width: 300px;
+  margin: 10px;
+  border-radius: 10px;
+  height: 390px;
+  background-color: #3b4d61;
+  padding: 5px; 
+  box-shadow: 0px 5px 10px rgb(32, 32, 32);
+  float:right;
+  overflow: hidden;
+  display: none;
+  padding-bottom: 0;
+}
   
-    
-    .messagepost{
-      /*padding: 0 16px 0px;*/
-      /*margin: 30px 0 110px;*/
-      background: #f5f7fa;}
-    
+    /* haut | droit | bas | gauche */
+.messagepost{
       
+  /*margin: 30px 0 110px;*/
+  background-color: #6b7b8c;
+  width: 290px;
+  height: 285px;
+  overflow-y: scroll;
+  overflow-x: hidden;
+  padding: 5px;
+  scrollbar-color:  #3b4d61 #778492;
+  scrollbar-width: thin;
+  border-radius: 0px;
+  transition: background-color 1s;
+}
+
+.contact {
+  border-radius: 10px 10px 0px 0;
+  padding: 5px;
+  margin: 0;
+  height: 30px;
+  background-color: ef9d10f;
+}
+
+p {
+  background-color: #6b7b8c;
+  word-wrap: break-word;
+  height: auto;
+  width: auto;
+
+  padding-bottom: 5px;
+  transition: background-color 0.5s; }
+  p:hover {
+  background-color: #3b4d61;
+}
+
+#p1 {
+  background:none;
+  height: auto;
+  width: auto;
+  border-radius: 1px;
+  text-indent: 5px;
+  padding: 5px;
+  margin: 0;
+}
   
-      p {
-        margin-bottom: 0.1rem;
-          margin-bottom: 20px; }
+span{ 
+  display: block;
+  font-size: 0.6em;
+  text-indent: 200px;
+}
+
+.msgBar{
+  display: flex;
+  width: auto;
+  height: auto;
+  margin:0;
+}
+  
+#zonedetexte {
+  width:310px;
+  height: 50px;
+  background-color: #3b4d61;
+  border: none;
+  border-radius:  0 0 0 10px;
+  color:rgb(255, 255, 255);
+  font-size: 1rem;
+  font-family: "Fira Code";
+        /*transition: background 0.5s, border-left 0.5s; }*/
+  overflow-y: hidden;
+  resize: none;
+  border-style: none;
+  outline: none;
+}
+  
         
+#send{
+  position: relative;
+  right: 0;
+  top: 1px;;
+  border-radius: 0 0 10px 0px;
+  width: 40px;
+  height: 50px;
+  border-style: none;
+  background: none;
+  color: rgba(235, 157, 14, 0.568);
+  font-size: 20px;
+}
 
-        
-    .msgBar{
-      position: absolute;
-      bottom: 0px;
-      
-      height: 400px;
-      padding-right: 16px;
-       }
-  
-      input {
-        width: auto;
-        height: 50px;
-        padding: 10px 78px 10px 16px;
-        background-color:deepskyblue;
-        border: none;
-        border-radius: 50px;
-        color:honeydew;
-        font-size: 1rem;
-        font-family: "Fira Code";
-        /*transition: background 0.5s, border-left 0.5s; }*/}
-  
-        input:focus {
-          box-shadow: none;
-          outline: none; }
-  
-      button {
-        position: absolute;
-        /*right: 5px;
-        bottom: 5px;*/
-        height: 40px;
-        padding: 0 14px;
-        border: none;
-        background-color:lightcoral;
-        border-radius: 50px;
-        color:lightsalmon;
-        cursor: pointer;
-        font-size: 1rem;
-        font-family: "Fira Code";
-        transition: all 0.1s ease-in-out;}
+#msgbutton {
+  position: absolute;
+  /*bottom: 50px;*/
+  right: 15px;
+  font-size: 30px;
+  border-style: none;
+  background-color: transparent;
+  transition: font-size 0.5s;
+  top: 15px;
+  color: rgba(233, 162, 30, 0.568);
+  outline: none;
+}
+#msgbutton:hover{
+  font-size: 33px;
+}
 
-        #msg {
-
-                position: fixed;
-    bottom: 50px;
-    right: 30px;
-    font-size: 40px;
-    border-style: none;
-    background-color: transparent;
-    transition: font-size 0.5s;
-        }
-        #msg:hover{
-            font-size: 45px;
-        }
 
 
